--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.0.0",
   "description": "",
   "scripts": {
-    "start": "vite",
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview"
   },
   "license": "MIT",
   "devDependencies": {
-    "vite": "^2.5.1",
-    "vite-plugin-solid": "^2.0.3"
+    "vite": "^2.5.7",
+    "vite-plugin-solid": "^2.0.3",
+    "vite-plugin-windicss": "^1.4.3",
+    "typescript": "^4.4.3"
   },
   "dependencies": {
-    "solid-js": "^1.1.1",
-    "solid-styled-components": "^0.27.3"
+    "solid-js": "^1.1.3"
   }
 }
